Android P 以下手机录音功能

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,6 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'com.github.HuBuFan:UrPermissionHelper:v1.1.0'
-    implementation project(':recordlib')
+    implementation project(':record_lib')
 
 }
