--- a/record_lib/src/main/AndroidManifest.xml
+++ b/record_lib/src/main/AndroidManifest.xml
@@ -1,2 +1,2 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.hubufan.mobile.record" />
+    package="com.hubufan.mobile.record_lib" />
